# pm-cli

./: .env.example  .gitignore  .pmrc.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  IMP_Claud.md  PHASE1.md  Phase1_Tickets.md  README.md  imp_gemini.md  pm-kit_phasing_story.md  pm_as-a-code1.md  pmkit_final_wired_stack_and_repl.md  prd_pm_cli.md  pyproject.toml
.claude/agents/: agent-architecture-guide.md  devops-pipeline-architect.md  product-manager-expert.md  prompt-engineer.md  python-llm-integration-expert.md  python-qa-engineer.md
examples/: LOGGING_GUIDE.md  logging_demo.py
pmkit/: __init__.py  __main__.py  cli.py
src/pmkit/: __init__.py  __main__.py  exceptions.py
src/pmkit/agents/: __init__.py  completion.py  enrichment.py  interactive_prompt.py  manual_input.py  okr_wizard.py  onboarding.py  templates.py  validators.py  value_display.py
src/pmkit/agents/steps/: __init__.py  base.py
src/pmkit/cli/: __init__.py  main.py  theme.py
src/pmkit/cli/commands/: __init__.py  config.py  init.py  new.py  okrs.py  status.py
src/pmkit/config/: __init__.py  loader.py  models.py
src/pmkit/context/: __init__.py  manager.py  migration.py  models.py  structure.py  validator.py  version.py
src/pmkit/llm/: __init__.py  grounding.py  models.py  openai_client.py
src/pmkit/llm/search/: __init__.py  base.py  cache.py  gemini_search.py  openai_search.py
src/pmkit/prd/: __init__.py
src/pmkit/prompts/: __init__.py  library.py  okr_templates.py  onboarding_prompts.py
src/pmkit/utils/: __init__.py  async_utils.py  console.py  decorators.py  logger.py  paths.py  tracing.py
src/pmkit/validators/: okr_validators.py
tests/: FIXTURES_GUIDE.md  conftest.py  test_agent_steps_base.py  test_async_utils.py  test_cli_commands.py  test_config.py  test_context_integration.py  test_context_manager.py  test_context_migration.py  test_context_models.py  test_context_structure.py  test_context_validator.py  test_context_version.py  test_decorators.py  test_enrichment.py  test_exceptions.py  test_fixtures_example.py  test_init_command.py  test_interactive_prompt.py  test_manual_input.py  test_okr_wizard.py  test_onboarding.py  test_onboarding_agent.py  test_onboarding_completion.py  test_openai_client.py  test_paths.py  test_search_providers.py
